--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-three/fiber": "^9.4.2",
     "@tailwindcss/postcss": "^4.1.18",
     "framer-motion": "^12.23.26",
+    "gsap": "^3.14.2",
     "maath": "^0.10.8",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
