--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
     "@tailwindcss/postcss": "^4.1.18",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
     "gsap": "^3.14.2",
     "lucide-react": "^0.561.0",
@@ -25,6 +27,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.10.1",
     "react-scroll": "^1.9.3",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.182.0"
   },
   "devDependencies": {
